# opsguard-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema_with_embeddings.py  0002_review_tasks.py  0003_audit_events.py
apps/api/src/opsguard_api/: __init__.py  config.py  constants.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py
apps/api/src/opsguard_api/evals/: __init__.py  rag.py  run_rag_evals.py
apps/api/src/opsguard_api/routes/: ai_review.py  answer.py  audit_events.py  documents.py  review_tasks.py  search.py
apps/api/src/opsguard_api/services/: ai_review.py  answer.py  audit_events.py  chunking.py  documents.py  embeddings.py  extraction.py  llm.py  retrieval.py  review_tasks.py  search.py
apps/api/tests/: conftest.py  test_ai_review.py  test_answer.py  test_audit_events.py  test_auth.py  test_chunking.py  test_documents.py  test_embeddings.py  test_health.py  test_rag_evals.py  test_review_tasks.py  test_search.py
apps/web/: .env.example  README.md  package.json
data/eval/: rag_eval_cases.jsonl
docs/: architecture.md  demo-scenarios.md  frontend.md  security.md
docs/decisions/: ADR-001-initial-database-setup.md  ADR-002-document-chunking-strategy.md  ADR-003-embedding-storage-with-pgvector.md  ADR-004-semantic-search-with-pgvector.md  ADR-005-rag-answer-with-citations.md  ADR-008-review-tasks-domain-model.md  ADR-009-secure-tool-calling-review-tasks.md  ADR-010-ai-audit-events.md  ADR-011-api-key-auth.md
(+5 files in other folders)
