[project]
name = "opsguard-api"
version = "0.1.0"
description = "FastAPI backend for OpsGuard AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pypdf",
    "python-multipart",
    "sqlalchemy>=2.0.50",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx2",
    "mypy",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
